kubernetes/stackrox-central/base/service.yaml
---
# Source: stackrox-central-services/templates/01-central-14-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: central
  namespace: stackrox
  labels:
    app.kubernetes.io/component: central
    app.kubernetes.io/instance: stackrox-central-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-central-services
    app.kubernetes.io/version: 4.10.1
    helm.sh/chart: stackrox-central-services-400.10.1
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-central-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
    service.beta.openshift.io/serving-cert-secret-name: central-monitoring-tls
spec:
  ports:
    - name: https
      port: 443
      targetPort: api
    - name: monitoring-tls
      port: 9091
      targetPort: monitoring-tls
  selector:
    app: central
  type: ClusterIP
---
# Source: stackrox-central-services/templates/02-scanner-07-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scanner
  namespace: stackrox
  labels:
    app.kubernetes.io/component: scanner
    app.kubernetes.io/instance: stackrox-central-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-central-services
    app.kubernetes.io/version: 4.10.1
    helm.sh/chart: stackrox-central-services-400.10.1
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-central-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  ports:
    - name: https-scanner
      port: 8080
      targetPort: https
    - name: grpcs-scanner
      port: 8443
      targetPort: grpc

  selector:
    app: scanner
  type: ClusterIP
---
# Source: stackrox-central-services/templates/02-scanner-07-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scanner-db
  namespace: stackrox
  labels:
    app.kubernetes.io/component: scanner
    app.kubernetes.io/instance: stackrox-central-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-central-services
    app.kubernetes.io/version: 4.10.1
    helm.sh/chart: stackrox-central-services-400.10.1
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-central-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  ports:
    - name: tcp-db
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app: scanner-db
  type: ClusterIP
---
# Source: stackrox-central-services/templates/02-scanner-v4-08-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scanner-v4-db
  namespace: stackrox
  labels:
    app.kubernetes.io/component: scanner-v4
    app.kubernetes.io/instance: stackrox-central-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-central-services
    app.kubernetes.io/version: 4.10.1
    helm.sh/chart: stackrox-central-services-400.10.1
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-central-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
spec:
  type: ClusterIP
  ports:
    - name: tcp-db
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app: scanner-v4-db
---
# Source: stackrox-central-services/templates/02-scanner-v4-08-indexer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scanner-v4-indexer
  namespace: stackrox
  labels:
    app.kubernetes.io/component: scanner-v4
    app.kubernetes.io/instance: stackrox-central-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-central-services
    app.kubernetes.io/version: 4.10.1
    helm.sh/chart: stackrox-central-services-400.10.1
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-central-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
    service.beta.openshift.io/serving-cert-secret-name: scanner-v4-indexer-monitoring-tls
spec:
  selector:
    app: scanner-v4-indexer
  clusterIP: None
  ports:
    - name: grpc-scanner-v4-indexer
      port: 8443
      targetPort: grpc
    - name: indexer-monitoring-tls
      port: 9091
      targetPort: monitoring-tls
---
# Source: stackrox-central-services/templates/02-scanner-v4-08-matcher-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scanner-v4-matcher
  namespace: stackrox
  labels:
    app.kubernetes.io/component: scanner-v4
    app.kubernetes.io/instance: stackrox-central-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-central-services
    app.kubernetes.io/version: 4.10.1
    helm.sh/chart: stackrox-central-services-400.10.1
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-central-services
    meta.helm.sh/release-namespace: stackrox
    owner: stackrox
    service.beta.openshift.io/serving-cert-secret-name: scanner-v4-matcher-monitoring-tls
spec:
  selector:
    app: scanner-v4-matcher
  clusterIP: None
  ports:
    - name: grpc-scanner-v4-matcher
      port: 8443
      targetPort: grpc

    - name: matcher-monitoring-tls
      port: 9091
      targetPort: monitoring-tls
